Bug 44304 - Weborder: Re-design > modifier selection, screen jumps to top of the page after selecting a modifier

--- a/skins/weborder/css/modifiers.css
+++ b/skins/weborder/css/modifiers.css
@@ -58,7 +58,7 @@
 
 .modifier input {
     position: absolute;
-    top: -1000px;
+    left: -9999px;
 }
 
 .modifier .title,
